--- a/dev/index.html
+++ b/dev/index.html
@@ -24,6 +24,37 @@
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
 
+    <br>
+
+    <div class="keys-1">
+      <kbd>⌘</kbd> + <kbd>shift</kbd> + <kbd>M</kbd>
+    </div>
+
+    <br>
+
+    <div class="keys-2">
+      <div class="kbd">
+        <span class="kbd__key">⌘</span>
+        <span class="kbd__label">Label</span>
+      </div>
+    </div>
+
+    <br>
+
+    <div class="even-columns">
+      <div class="my-box-1">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam fuga dolores distinctio quam dolorem ad facere
+        tempore porro quod? Ipsam, quod voluptates itaque nobis suscipit blanditiis obcaecati eveniet qui illo?
+      </div>
+
+      <div class="my-box-2">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam fuga dolores distinctio quam dolorem ad facere
+        tempore porro quod? Ipsam, quod voluptates itaque nobis suscipit blanditiis obcaecati eveniet qui illo?
+      </div>
+    </div>
+
+    <br>
+
     <div class="my-32 flex flex-wrap gap-4">
       <button>Button</button>
       <button disabled>Button</button>
@@ -45,13 +76,23 @@
       cupiditate cumque dolore voluptatem
       adipisci consequuntur. Perspiciatis, eligendi sed suscipit tempore esse voluptas quae dolorem sunt officiis
       expedita, quos consequatur! Cumque.
-      Ratione nemo omnis cum impedit saepe iste, quae atque asperiores ipsa laudantium hic inventore quo, vitae officia
+      Ratione nemo omnis cum impedit saepe iste, quae atque asperiores ipsa laudantium hic inventore quo, vitae officia.
+
+      <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Facere perferendis rerum ex ducimus nobis optio mollitia molestias beatae odio dicta omnis placeat fuga ab
+          quis nemo, commodi, corporis dignissimos obcaecati.</li>
+        <li>Cum reprehenderit commodi veniam, necessitatibus maiores delectus fugiat quae id voluptas quod similique?
+        </li>
+      </ul>
+
       velit. Aperiam, ex minima? Magnam, aspernatur. Velit iste asperiores minima, magnam voluptatum in.
       Ab qui officiis aperiam voluptatem, nostrum est magni voluptatum similique aliquid. Eius nam omnis officia beatae
       earum consequuntur unde id, quia, ratione blanditiis quo molestias autem, deleniti deserunt neque voluptate.
       Mollitia perspiciatis dicta vero quo libero! Numquam delectus doloremque iure est dolorum ex vitae consequuntur
       praesentium optio veritatis unde, tempore molestias non iusto tempora ab quod, labore asperiores consectetur?
-      Obcaecati!</div>
+      Obcaecati!
+    </div>
 
     <div class="wrapper">
       <p class="text">
@@ -81,32 +122,11 @@
     <blockquote>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quos corporis expedita enim in ratione animi,
         accusantium nulla reiciendis, hic officia doloribus eos delectus beatae error quaerat sapiente fuga tempore!</p>
+      <cite>- Forrest Gump</cite>
     </blockquote>
 
     <pre><code>console.log('hello 🚀');</code></pre>
     <pre class="mt-16"><code data-lang="JavaScript">console.log('hello 👋');</code></pre>
-
-    <div class="even-columns">
-      <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur assumenda veniam voluptate hic
-        quaerat doloribus impedit accusamus, molestiae dolore maxime ipsam minus nulla ipsa perspiciatis ut tempora
-        similique tempore.</div>
-
-      <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur assumenda veniam voluptate hic
-        quaerat doloribus impedit accusamus, molestiae dolore maxime ipsam minus nulla ipsa perspiciatis ut tempora
-        similique tempore.</div>
-
-      <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur assumenda veniam voluptate hic
-        quaerat doloribus impedit accusamus, molestiae dolore maxime ipsam minus nulla ipsa perspiciatis ut tempora
-        similique tempore.</div>
-
-      <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur assumenda veniam voluptate hic
-        quaerat doloribus impedit accusamus, molestiae dolore maxime ipsam minus nulla ipsa perspiciatis ut tempora
-        similique tempore.</div>
-
-      <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur assumenda veniam voluptate hic
-        quaerat doloribus impedit accusamus, molestiae dolore maxime ipsam minus nulla ipsa perspiciatis ut tempora
-        similique tempore.</div>
-    </div>
   </div>
 </body>
 
