--- a/dev/index.html
+++ b/dev/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
 </head>
 
 <body class="accent-primary">
@@ -23,6 +24,17 @@
     <h4>Heading 4</h4>
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
+
+    <br>
+
+    <div class="prose">
+      <h1>Heading 1</h1>
+      <h2>Heading 2</h2>
+      <h3>Heading 3</h3>
+      <h4>Heading 4</h4>
+      <h5>Heading 5</h5>
+      <h6>Heading 6</h6>
+    </div>
 
     <br>
 
@@ -55,6 +67,25 @@
 
     <br>
 
+    <div class="even-columns">
+      <div class="box-s2">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam fuga dolores distinctio quam dolorem ad facere
+        tempore porro quod? Ipsam, quod voluptates itaque nobis suscipit blanditiis obcaecati eveniet qui illo?
+      </div>
+
+      <div class="box-s3">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam fuga dolores distinctio quam dolorem ad facere
+        tempore porro quod? Ipsam, quod voluptates itaque nobis suscipit blanditiis obcaecati eveniet qui illo?
+      </div>
+
+      <div class="box-s4">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam fuga dolores distinctio quam dolorem ad facere
+        tempore porro quod? Ipsam, quod voluptates itaque nobis suscipit blanditiis obcaecati eveniet qui illo?
+      </div>
+    </div>
+
+    <br>
+
     <div class="my-32 flex flex-wrap gap-4">
       <button>Button</button>
       <button disabled>Button</button>
@@ -68,15 +99,18 @@
       <button class="btn btn--outline btn--info">Button</button>
     </div>
 
-    <div class="mt-8 md:mt-16 md:columns-2 xl:gap-x-32 text-md md:text-lg">Lorem ipsum dolor sit amet, consectetur
-      adipisicing elit.
-      Ullam accusamus deleniti illo eveniet, aspernatur quasi id quidem? Harum, quis earum? Non delectus voluptas
-      debitis
-      beatae atque dolor enim esse nostrum! Sed accusamus animi recusandae inventore quis, doloribus corporis eveniet
-      cupiditate cumque dolore voluptatem
-      adipisci consequuntur. Perspiciatis, eligendi sed suscipit tempore esse voluptas quae dolorem sunt officiis
-      expedita, quos consequatur! Cumque.
-      Ratione nemo omnis cum impedit saepe iste, quae atque asperiores ipsa laudantium hic inventore quo, vitae officia.
+    <div class="mt-8 md:mt-16 md:columns-2 xl:gap-x-32 text-md md:text-lg">
+      <span class="lead">
+        Lorem ipsum dolor sit amet, consectetur
+        adipisicing elit.
+        Ullam accusamus deleniti illo eveniet, aspernatur quasi id quidem? Harum, quis earum? Non delectus voluptas
+        debitis
+        beatae atque dolor enim esse nostrum! Sed accusamus animi recusandae inventore quis, doloribus corporis eveniet
+        cupiditate cumque dolore voluptatem
+        adipisci consequuntur. Perspiciatis, eligendi sed suscipit tempore esse voluptas quae dolorem sunt officiis
+        expedita, quos consequatur! Cumque.
+        Ratione nemo omnis cum impedit saepe iste, quae atque asperiores ipsa laudantium hic inventore quo, vitae
+        officia.</span>
 
       <ul>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
@@ -86,7 +120,8 @@
         </li>
       </ul>
 
-      velit. Aperiam, ex minima? Magnam, aspernatur. Velit iste asperiores minima, magnam voluptatum in.
+      velit. Aperiam, ex minima? Magnam, aspernatur. <abbr title="Veliterum Magna">Velit</abbr> iste asperiores minima,
+      magnam voluptatum in.
       Ab qui officiis aperiam voluptatem, nostrum est magni voluptatum similique aliquid. Eius nam omnis officia beatae
       earum consequuntur unde id, quia, ratione blanditiis quo molestias autem, deleniti deserunt neque voluptate.
       Mollitia perspiciatis dicta vero quo libero! Numquam delectus doloremque iure est dolorum ex vitae consequuntur
