--- a/dev/index.html
+++ b/dev/index.html
@@ -47,7 +47,9 @@
     <div class="keys-2">
       <div class="kbd">
         <span class="kbd__key">⌘</span>
-        <span class="kbd__label">Label</span>
+        +
+        <span class="kbd__key">C</span>
+        <span class="kbd__label">Copy</span>
       </div>
     </div>
 
@@ -60,6 +62,11 @@
       </div>
 
       <div class="my-box-2">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam fuga dolores distinctio quam dolorem ad facere
+        tempore porro quod? Ipsam, quod voluptates itaque nobis suscipit blanditiis obcaecati eveniet qui illo?
+      </div>
+
+      <div class="my-box-3">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam fuga dolores distinctio quam dolorem ad facere
         tempore porro quod? Ipsam, quod voluptates itaque nobis suscipit blanditiis obcaecati eveniet qui illo?
       </div>
@@ -99,18 +106,19 @@
       <button class="btn btn--outline btn--info">Button</button>
     </div>
 
-    <div class="mt-8 md:mt-16 md:columns-2 xl:gap-x-32 text-md md:text-lg">
-      <span class="lead">
+    <div class="prose mt-8 md:mt-16 md:columns-2 xl:gap-x-32 text-md md:text-lg">
+      <p class="lead">
         Lorem ipsum dolor sit amet, consectetur
         adipisicing elit.
         Ullam accusamus deleniti illo eveniet, aspernatur quasi id quidem? Harum, quis earum? Non delectus voluptas
-        debitis
-        beatae atque dolor enim esse nostrum! Sed accusamus animi recusandae inventore quis, doloribus corporis eveniet
+        debitis beatae atque dolor enim esse nostrum! Sed accusamus animi recusandae inventore quis, doloribus corporis
+        eveniet
         cupiditate cumque dolore voluptatem
         adipisci consequuntur. Perspiciatis, eligendi sed suscipit tempore esse voluptas quae dolorem sunt officiis
         expedita, quos consequatur! Cumque.
         Ratione nemo omnis cum impedit saepe iste, quae atque asperiores ipsa laudantium hic inventore quo, vitae
-        officia.</span>
+        officia.
+      </p>
 
       <ul>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
@@ -120,45 +128,32 @@
         </li>
       </ul>
 
-      velit. Aperiam, ex minima? Magnam, aspernatur. <abbr title="Veliterum Magna">Velit</abbr> iste asperiores minima,
-      magnam voluptatum in.
-      Ab qui officiis aperiam voluptatem, nostrum est magni voluptatum similique aliquid. Eius nam omnis officia beatae
-      earum consequuntur unde id, quia, ratione blanditiis quo molestias autem, deleniti deserunt neque voluptate.
-      Mollitia perspiciatis dicta vero quo libero! Numquam delectus doloremque iure est dolorum ex vitae consequuntur
-      praesentium optio veritatis unde, tempore molestias non iusto tempora ab quod, labore asperiores consectetur?
-      Obcaecati!
-    </div>
+      <p>
+        Aperiam, ex minima? Magnam, aspernatur. <abbr title="Veliterum Magna">Velit</abbr> iste asperiores
+        minima, magnam voluptatum in.
+        Ab qui officiis aperiam voluptatem, nostrum est magni voluptatum similique aliquid. Eius nam omnis officia
+        beatae earum consequuntur unde id, quia, ratione blanditiis quo molestias autem, deleniti deserunt neque
+        voluptate.
+        Mollitia perspiciatis dicta vero quo libero! Numquam delectus doloremque iure est dolorum ex vitae consequuntur
+        praesentium optio veritatis unde, tempore molestias non iusto tempora ab quod, labore asperiores consectetur?
+        Obcaecati!
+      </p>
 
-    <div class="wrapper">
-      <p class="text">
+      <blockquote>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quos corporis expedita enim in ratione
+          animi,
+          accusantium nulla reiciendis, hic officia <a href="#">consequntur</a> molestiae atque reprehenderit. eos
+          delectus beatae error quaerat sapiente fuga tempore!
+        </p>
+        <cite>- Forrest Gump</cite>
+      </blockquote>
+
+      <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto commodi id dolorem deleniti eum quis ea.
         Quaerat, possimus doloribus? Laborum iste quam <a href="#">exercitationem aperiam</a> eum expedita nisi illo
         commodi itaque.
       </p>
-
-      <!-- <div class="lists centered">
-        <ul role="list">
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
-          <li>Item 4</li>
-        </ul>
-      </div> -->
-
-      <!-- <button class="btn">Click me</button> -->
     </div>
-
-    <div class="wrapper hidden md:block">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur atque eius dolores fuga libero reiciendis
-      blanditiis, dicta maiores sint. Cumque sit deserunt at officiis quisquam quod
-      <a href="#">consequntur</a> molestiae atque reprehenderit.
-    </div>
-
-    <blockquote>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quos corporis expedita enim in ratione animi,
-        accusantium nulla reiciendis, hic officia doloribus eos delectus beatae error quaerat sapiente fuga tempore!</p>
-      <cite>- Forrest Gump</cite>
-    </blockquote>
 
     <pre><code>console.log('hello 🚀');</code></pre>
     <pre class="mt-16"><code data-lang="JavaScript">console.log('hello 👋');</code></pre>
