--- a/dev/index.html
+++ b/dev/index.html
@@ -18,15 +18,6 @@
   <div class="mx-auto xl:container p-32">
     <header class="navbar">Menu</header>
 
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
-
-    <br>
-
     <div class="prose">
       <h1>Heading 1</h1>
       <h2>Heading 2</h2>
@@ -37,6 +28,8 @@
     </div>
 
     <br>
+
+    <h1>Almost before we knew it, we had left the ground.</h1>
 
     <div class="keys-1">
       <kbd>⌘</kbd> + <kbd>shift</kbd> + <kbd>M</kbd>
@@ -58,7 +51,8 @@
     <div class="even-columns">
       <div class="my-box-1">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam fuga dolores distinctio quam dolorem ad facere
-        tempore porro quod? Ipsam, quod voluptates itaque nobis suscipit blanditiis obcaecati eveniet qui illo?
+        tempore porro quod? Ipsam, <strong>quod</strong> voluptates itaque nobis suscipit blanditiis obcaecati eveniet
+        qui illo?
       </div>
 
       <div class="my-box-2">
@@ -110,13 +104,16 @@
       <p class="lead">
         Lorem ipsum dolor sit amet, consectetur
         adipisicing elit.
-        Ullam accusamus deleniti illo eveniet, aspernatur quasi id quidem? Harum, quis earum? Non delectus voluptas
+        Ullam accusamus deleniti illo eveniet, <strong>aspernatur</strong> quasi id quidem? Harum, quis earum? Non
+        delectus voluptas
         debitis beatae atque dolor enim esse nostrum! Sed accusamus animi recusandae inventore quis, doloribus corporis
         eveniet
         cupiditate cumque dolore voluptatem
-        adipisci consequuntur. Perspiciatis, eligendi sed suscipit tempore esse voluptas quae dolorem sunt officiis
+        adipisci consequuntur. Perspiciatis, eligendi sed suscipit <mark>tempore</mark> esse voluptas quae dolorem sunt
+        officiis
         expedita, quos consequatur! Cumque.
-        Ratione nemo omnis cum impedit saepe iste, quae atque asperiores ipsa laudantium hic inventore quo, vitae
+        Ratione nemo omnis cum impedit saepe iste, quae atque <em>asperiores</em> ipsa laudantium hic inventore quo,
+        vitae
         officia.
       </p>
 
