--- a/dev/index.html
+++ b/dev/index.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
 </head>
 
-<body class="accent-primary">
+<body class="accent-info">
   <div class="mx-auto xl:container p-32">
     <header class="navbar">Menu</header>
 
