--- a/dev/index.html
+++ b/dev/index.html
@@ -27,15 +27,9 @@
       <h6>Heading 6</h6>
     </div>
 
-    <br>
-
-    <h1>Almost before we knew it, we had left the ground.</h1>
-
     <div class="keys-1">
       <kbd>⌘</kbd> + <kbd>shift</kbd> + <kbd>M</kbd>
     </div>
-
-    <br>
 
     <div class="keys-2">
       <div class="kbd">
@@ -45,8 +39,6 @@
         <span class="kbd__label">Copy</span>
       </div>
     </div>
-
-    <br>
 
     <div class="even-columns">
       <div class="my-box-1">
@@ -66,8 +58,6 @@
       </div>
     </div>
 
-    <br>
-
     <div class="even-columns">
       <div class="box-s2">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam fuga dolores distinctio quam dolorem ad facere
@@ -85,8 +75,6 @@
       </div>
     </div>
 
-    <br>
-
     <div class="my-32 flex flex-wrap gap-4">
       <button>Button</button>
       <button disabled>Button</button>
@@ -101,6 +89,8 @@
     </div>
 
     <div class="prose mt-8 md:mt-16 md:columns-2 xl:gap-x-32 text-md md:text-lg">
+      <h2>Almost before we knew it</h2>
+
       <p class="lead">
         Lorem ipsum dolor sit amet, consectetur
         adipisicing elit.
@@ -109,12 +99,15 @@
         debitis beatae atque dolor enim esse nostrum! Sed accusamus animi recusandae inventore quis, doloribus corporis
         eveniet
         cupiditate cumque dolore voluptatem
-        adipisci consequuntur. Perspiciatis, eligendi sed suscipit <mark>tempore</mark> esse voluptas quae dolorem sunt
-        officiis
-        expedita, quos consequatur! Cumque.
+      </p>
+
+      <h3>Brown foxes and fences</h3>
+
+      <p>
+        Adipisci consequuntur. Perspiciatis, eligendi sed suscipit <mark>tempore</mark> esse voluptas quae dolorem sunt
+        officiis expedita, quos consequatur! Cumque.
         Ratione nemo omnis cum impedit saepe iste, quae atque <em>asperiores</em> ipsa laudantium hic inventore quo,
-        vitae
-        officia.
+        vitae officia.
       </p>
 
       <ul>
@@ -131,13 +124,15 @@
         Ab qui officiis aperiam voluptatem, nostrum est magni voluptatum similique aliquid. Eius nam omnis officia
         beatae earum consequuntur unde id, quia, ratione blanditiis quo molestias autem, deleniti deserunt neque
         voluptate.
-        Mollitia perspiciatis dicta vero quo libero! Numquam delectus doloremque iure est dolorum ex vitae consequuntur
+        Mollitia perspiciatis dicta vero quo libero! Numquam delectus doloremque iure est dolorum ex vitae
+        consequuntur <code>amet</code>
         praesentium optio veritatis unde, tempore molestias non iusto tempora ab quod, labore asperiores consectetur?
         Obcaecati!
       </p>
 
       <blockquote>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quos corporis expedita enim in ratione
+        <p>Lorem ipsum dolor, sit consectetur adipisicing elit. Magnam quos corporis expedita enim in
+          ratione
           animi,
           accusantium nulla reiciendis, hic officia <a href="#">consequntur</a> molestiae atque reprehenderit. eos
           delectus beatae error quaerat sapiente fuga tempore!
