--- a/dev/index.html
+++ b/dev/index.html
@@ -111,12 +111,28 @@
       </p>
 
       <ul>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-        <li>Facere perferendis rerum ex ducimus nobis optio mollitia molestias beatae odio dicta omnis placeat fuga ab
-          quis nemo, commodi, corporis dignissimos obcaecati.</li>
-        <li>Cum reprehenderit commodi veniam, necessitatibus maiores delectus fugiat quae id voluptas quod similique?
+        <li>Milk</li>
+        <li>Cheese<ul>
+            <li>Blue cheese</li>
+            <li>Feta</li>
+          </ul>
         </li>
       </ul>
+
+      <ol>
+        <li>Alpha</li>
+        <li>Beta</li>
+        <li>Gamma</li>
+        <li>Delta</li>
+      </ol>
+
+      <dl>
+        <dt>Chrome</dt>
+        <dd>Nulla accumsan elit ac libero mattis malesuada id sed lorem. Aliquam at commodo dui.</dd>
+        <dt>Firefox</dt>
+        <dd>Morbi fermentum varius arcu, in hendrerit turpis. Ut vestibulum nibh sed lorem blandit, ac ultrices arcu
+          dictum.</dd>
+      </dl>
 
       <p>
         Aperiam, ex minima? Magnam, aspernatur. <abbr title="Veliterum Magna">Velit</abbr> iste asperiores
