--- a/dev/index.html
+++ b/dev/index.html
@@ -88,6 +88,11 @@
       <button class="btn btn--outline btn--info">Button</button>
     </div>
 
+    <ul>
+      <li>Milk</li>
+      <li>Cheese</li>
+    </ul>
+
     <div class="prose mt-8 md:mt-16 md:columns-2 xl:gap-x-32 text-md md:text-lg">
       <h2>Almost before we knew it</h2>
 
@@ -154,6 +159,15 @@
           delectus beatae error quaerat sapiente fuga tempore!
         </p>
         <cite>- Forrest Gump</cite>
+      </blockquote>
+
+      <blockquote>
+        <p>Lorem ipsum dolor, sit consectetur adipisicing elit. Magnam quos corporis expedita enim in
+          ratione
+          animi,
+          accusantium nulla reiciendis, hic officia <a href="#">consequntur</a> molestiae atque reprehenderit. eos
+          delectus beatae error quaerat sapiente fuga tempore!
+        </p>
       </blockquote>
 
       <p>
