--- a/dev/index.html
+++ b/dev/index.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
 </head>
 
-<body class="accent-danger">
+<body class="accent-primary">
   <div class="mx-auto xl:container p-32">
     <header class="navbar">Menu</header>
 
@@ -162,12 +162,11 @@
       </blockquote>
 
       <blockquote>
-        <p>Lorem ipsum dolor, sit consectetur adipisicing elit. Magnam quos corporis expedita enim in
-          ratione
-          animi,
-          accusantium nulla reiciendis, hic officia <a href="#">consequntur</a> molestiae atque reprehenderit. eos
-          delectus beatae error quaerat sapiente fuga tempore!
-        </p>
+        Lorem ipsum dolor, sit consectetur adipisicing elit. Magnam quos corporis expedita enim in
+        ratione
+        animi,
+        accusantium nulla reiciendis, hic officia <a href="#">consequntur</a> molestiae atque reprehenderit. eos
+        delectus beatae error quaerat sapiente fuga tempore!
       </blockquote>
 
       <p>
