--- a/dev/index.html
+++ b/dev/index.html
@@ -106,7 +106,7 @@
         cupiditate cumque dolore voluptatem
       </p>
 
-      <h3>Brown foxes and fences</h3>
+      <h3>The quick brown fox jumps over the lazy dog</h3>
 
       <p>
         Adipisci consequuntur. Perspiciatis, eligendi sed suscipit <mark>tempore</mark> esse voluptas quae dolorem sunt
