--- a/dev/index.html
+++ b/dev/index.html
@@ -76,16 +76,16 @@
     </div>
 
     <div class="my-32 flex flex-wrap gap-4">
-      <button>Button</button>
-      <button disabled>Button</button>
-      <button class="btn btn--dark">Button</button>
-      <button class="btn btn--primary">Button</button>
-      <button class="btn btn--info">Button</button>
-      <button class="btn btn--success">Button</button>
-      <button class="btn btn--warning">Button</button>
-      <button class="btn btn--danger">Button</button>
-      <button class="btn btn--outline btn--dark">Button</button>
-      <button class="btn btn--outline btn--info">Button</button>
+      <button autofocus>Button</button>
+      <!-- <button disabled>Button</button> -->
+      <!-- <button class="btn btn--dark">Button</button> -->
+      <!-- <button class="btn btn--primary">Button</button> -->
+      <!-- <button class="btn btn--info">Button</button> -->
+      <!-- <button class="btn btn--success">Button</button> -->
+      <!-- <button class="btn btn--warning">Button</button> -->
+      <!-- <button class="btn btn--danger">Button</button> -->
+      <!-- <button class="btn btn--outline btn--dark">Button</button> -->
+      <!-- <button class="btn btn--outline btn--info">Button</button> -->
     </div>
 
     <ul>
