--- a/dev/index.html
+++ b/dev/index.html
@@ -27,6 +27,11 @@
       <h6>Heading 6</h6>
     </div>
 
+    <div class="prose">
+      <h1>This is a title</h1>
+      <p class="subheading">This is a subtitle</p>
+    </div>
+
     <div class="keys-1">
       <kbd>⌘</kbd> + <kbd>shift</kbd> + <kbd>M</kbd>
     </div>
@@ -77,9 +82,9 @@
 
     <div class="my-32 flex flex-wrap gap-4">
       <button autofocus>Button</button>
-      <!-- <button disabled>Button</button> -->
-      <!-- <button class="btn btn--dark">Button</button> -->
-      <!-- <button class="btn btn--primary">Button</button> -->
+      <button disabled>Button</button>
+      <button class="btn btn--dark">Button</button>
+      <button class="btn btn--primary">Button</button>
       <!-- <button class="btn btn--info">Button</button> -->
       <!-- <button class="btn btn--success">Button</button> -->
       <!-- <button class="btn btn--warning">Button</button> -->
@@ -151,15 +156,20 @@
         Obcaecati!
       </p>
 
-      <blockquote>
-        <p>Lorem ipsum dolor, sit consectetur adipisicing elit. Magnam quos corporis expedita enim in
-          ratione
-          animi,
-          accusantium nulla reiciendis, hic officia <a href="#">consequntur</a> molestiae atque reprehenderit. eos
-          delectus beatae error quaerat sapiente fuga tempore!
-        </p>
-        <cite>- Forrest Gump</cite>
-      </blockquote>
+      <figure>
+        <blockquote>
+          <p>Lorem ipsum dolor, sit consectetur adipisicing elit. Magnam quos corporis expedita enim in
+            ratione
+            animi,
+            accusantium nulla reiciendis, hic officia <a href="#">consequntur</a> molestiae atque reprehenderit. eos
+            delectus beatae error quaerat sapiente fuga tempore!
+          </p>
+        </blockquote>
+
+        <figcaption>
+          <cite title="Source Title">- Forrest Gump</cite>
+        </figcaption>
+      </figure>
 
       <blockquote>
         Lorem ipsum dolor, sit consectetur adipisicing elit. Magnam quos corporis expedita enim in
