--- a/dev/index.html
+++ b/dev/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dim">
+<html lang="en" data-theme="auto">
 
 <head>
   <meta charset="UTF-8" />
@@ -186,8 +186,12 @@
       </p>
     </div>
 
-    <pre><code>console.log('hello 🚀');</code></pre>
+    <pre class=""><code>console.log('hello 🚀');</code></pre>
     <pre class="mt-16"><code data-lang="JavaScript">console.log('hello 👋');</code></pre>
+
+    <div class="my-32 shadow-danger">
+      Hello
+    </div>
   </div>
 </body>
 
