--- a/dev/index.html
+++ b/dev/index.html
@@ -10,8 +10,9 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body class="accent-primary">
@@ -27,16 +28,24 @@
       <h6>Heading 6</h6>
     </div>
 
-    <div class="prose">
-      <h1>This is a title</h1>
-      <p class="subheading">This is a subtitle</p>
+    <div class="buttons my-32 flex flex-wrap gap-4">
+      <button autofocus>Button</button>
+      <button disabled>Disabled</button>
+      <button class="btn btn--dark">Click Me</button>
+      <button class="btn btn--primary">Button</button>
+      <button class="btn btn--info">Button</button>
+      <button class="btn btn--success">Button</button>
+      <button class="btn btn--warning">Button</button>
+      <button class="btn btn--danger">Button</button>
+      <button class="btn btn--outline btn--dark">Button</button>
+      <button class="btn btn--outline btn--info">Button</button>
     </div>
 
-    <div class="keys-1">
+    <div class="keys-1 my-16">
       <kbd>⌘</kbd> + <kbd>shift</kbd> + <kbd>M</kbd>
     </div>
 
-    <div class="keys-2">
+    <div class="keys-2  my-16">
       <div class="kbd">
         <span class="kbd__key">⌘</span>
         +
@@ -63,7 +72,7 @@
       </div>
     </div>
 
-    <div class="even-columns">
+    <div class="even-columns mt-32">
       <div class="box-s2">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam fuga dolores distinctio quam dolorem ad facere
         tempore porro quod? Ipsam, quod voluptates itaque nobis suscipit blanditiis obcaecati eveniet qui illo?
@@ -78,19 +87,6 @@
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam fuga dolores distinctio quam dolorem ad facere
         tempore porro quod? Ipsam, quod voluptates itaque nobis suscipit blanditiis obcaecati eveniet qui illo?
       </div>
-    </div>
-
-    <div class="my-32 flex flex-wrap gap-4">
-      <button autofocus>Button</button>
-      <button disabled>Button</button>
-      <button class="btn btn--dark">Button</button>
-      <button class="btn btn--primary">Button</button>
-      <!-- <button class="btn btn--info">Button</button> -->
-      <!-- <button class="btn btn--success">Button</button> -->
-      <!-- <button class="btn btn--warning">Button</button> -->
-      <!-- <button class="btn btn--danger">Button</button> -->
-      <!-- <button class="btn btn--outline btn--dark">Button</button> -->
-      <!-- <button class="btn btn--outline btn--info">Button</button> -->
     </div>
 
     <ul>
