--- a/dev/index.html
+++ b/dev/index.html
@@ -32,13 +32,15 @@
       <button autofocus>Button</button>
       <button disabled>Disabled</button>
       <button class="btn btn--dark">Click Me</button>
-      <button class="btn btn--primary">Button</button>
-      <button class="btn btn--info">Button</button>
-      <button class="btn btn--success">Button</button>
-      <button class="btn btn--warning">Button</button>
-      <button class="btn btn--danger">Button</button>
-      <button class="btn btn--outline btn--dark">Button</button>
-      <button class="btn btn--outline btn--info">Button</button>
+      <button class="btn btn--solid">Button</button>
+      <button class="btn btn--solid accent-secondary">Button</button>
+      <button class="btn btn--solid accent-neutral">Button</button>
+      <button class="btn btn--solid accent-info">Button</button>
+      <button class="btn btn--solid accent-success">Button</button>
+      <button class="btn btn--solid accent-warning">Button</button>
+      <button class="btn btn--solid accent-danger">Button</button>
+      <button class="btn btn--outline">Button</button>
+      <button class="btn btn--outline">Button</button>
     </div>
 
     <div class="keys-1 my-16">
