--- a/dev/index.html
+++ b/dev/index.html
@@ -28,7 +28,7 @@
       <h6>Heading 6</h6>
     </div>
 
-    <div class="buttons my-32 flex flex-wrap gap-4">
+    <div class="buttons">
       <button autofocus>Button</button>
       <button disabled>Disabled</button>
       <button class="btn btn--dark">Click Me</button>
