--- a/dev/index.html
+++ b/dev/index.html
@@ -15,7 +15,7 @@
     rel="stylesheet">
 </head>
 
-<body class="accent-primary">
+<body class="accent">
   <div class="mx-auto xl:container p-32">
     <header class="navbar">Menu</header>
 
@@ -28,20 +28,41 @@
       <h6>Heading 6</h6>
     </div>
 
+
+    <h3 class="mt-16">Default</h3>
     <div class="buttons">
       <button autofocus>Button</button>
       <button disabled>Disabled</button>
-      <button class="btn btn--dark">Click Me</button>
+      <button class="btn btn--dark">Button</button>
+      <button class="btn btn--dark" disabled>Button</button>
+    </div>
+
+
+
+    <h3 class="mt-16">Solid</h3>
+    <div class="buttons">
       <button class="btn btn--solid">Button</button>
+      <button class="btn btn--solid accent-primary" disabled>Disabled</button>
       <button class="btn btn--solid accent-secondary">Button</button>
       <button class="btn btn--solid accent-neutral">Button</button>
       <button class="btn btn--solid accent-info">Button</button>
       <button class="btn btn--solid accent-success">Button</button>
       <button class="btn btn--solid accent-warning">Button</button>
       <button class="btn btn--solid accent-danger">Button</button>
-      <button class="btn btn--outline">Button</button>
-      <button class="btn btn--outline">Button</button>
     </div>
+
+    <h3 class="mt-16">Outline</h3>
+    <div class="buttons">
+      <button class="btn btn--outline">Button</button>
+      <button class="btn btn--outline accent-primary" disabled>Disabled</button>
+      <button class="btn btn--outline accent-secondary">Button</button>
+      <button class="btn btn--outline accent-neutral">Button</button>
+      <button class="btn btn--outline accent-info">Button</button>
+      <button class="btn btn--outline accent-success">Button</button>
+      <button class="btn btn--outline accent-warning">Button</button>
+      <button class="btn btn--outline accent-danger">Button</button>
+    </div>
+
 
     <div class="keys-1 my-16">
       <kbd>⌘</kbd> + <kbd>shift</kbd> + <kbd>M</kbd>
