--- a/dev/index.html
+++ b/dev/index.html
@@ -33,11 +33,7 @@
     <div class="buttons">
       <button autofocus>Button</button>
       <button disabled>Disabled</button>
-      <button class="btn btn--dark">Button</button>
-      <button class="btn btn--dark" disabled>Button</button>
     </div>
-
-
 
     <h3 class="mt-16">Solid</h3>
     <div class="buttons">
@@ -61,6 +57,18 @@
       <button class="btn btn--outline accent-success">Button</button>
       <button class="btn btn--outline accent-warning">Button</button>
       <button class="btn btn--outline accent-danger">Button</button>
+    </div>
+
+    <h3 class="mt-16">Ghost</h3>
+    <div class="buttons">
+      <button class="btn btn--ghost">Button</button>
+      <button class="btn btn--ghost accent-primary" disabled>Disabled</button>
+      <button class="btn btn--ghost accent-secondary">Button</button>
+      <button class="btn btn--ghost accent-neutral">Button</button>
+      <button class="btn btn--ghost accent-info">Button</button>
+      <button class="btn btn--ghost accent-success">Button</button>
+      <button class="btn btn--ghost accent-warning">Button</button>
+      <button class="btn btn--ghost accent-danger">Button</button>
     </div>
 
 
