--- a/dev/index.html
+++ b/dev/index.html
@@ -38,39 +38,58 @@
     <h3 class="mt-16">Solid</h3>
     <div class="buttons">
       <button class="btn btn--solid">Button</button>
-      <button class="btn btn--solid accent-primary" disabled>Disabled</button>
-      <button class="btn btn--solid accent-secondary">Button</button>
-      <button class="btn btn--solid accent-neutral">Button</button>
-      <button class="btn btn--solid accent-info">Button</button>
-      <button class="btn btn--solid accent-success">Button</button>
-      <button class="btn btn--solid accent-warning">Button</button>
-      <button class="btn btn--solid accent-danger">Button</button>
+      <button class="btn btn--solid btn--dark">Button</button>
+      <button class="btn btn--solid btn--primary">Button</button>
+      <button class="btn btn--solid btn--secondary">Button</button>
+      <button class="btn btn--solid btn--neutral">Button</button>
+      <button class="btn btn--solid btn--info">Button</button>
+      <button class="btn btn--solid btn--success">Button</button>
+      <button class="btn btn--solid btn--warning">Button</button>
+      <button class="btn btn--solid btn--danger">Button</button>
+      <button class="btn btn--solid" disabled>Disabled</button>
     </div>
 
     <h3 class="mt-16">Outline</h3>
     <div class="buttons">
       <button class="btn btn--outline">Button</button>
-      <button class="btn btn--outline accent-primary" disabled>Disabled</button>
-      <button class="btn btn--outline accent-secondary">Button</button>
-      <button class="btn btn--outline accent-neutral">Button</button>
-      <button class="btn btn--outline accent-info">Button</button>
-      <button class="btn btn--outline accent-success">Button</button>
-      <button class="btn btn--outline accent-warning">Button</button>
-      <button class="btn btn--outline accent-danger">Button</button>
+      <button class="btn btn--outline btn--dark">Button</button>
+      <button class="btn btn--outline btn--primary">Button</button>
+      <button class="btn btn--outline btn--secondary">Button</button>
+      <button class="btn btn--outline btn--neutral">Button</button>
+      <button class="btn btn--outline btn--info">Button</button>
+      <button class="btn btn--outline btn--success">Button</button>
+      <button class="btn btn--outline btn--warning">Button</button>
+      <button class="btn btn--outline btn--danger">Button</button>
+      <button class="btn btn--outline" disabled>Disabled</button>
+    </div>
+
+    <h3 class="mt-16">Faded</h3>
+    <div class="buttons">
+      <button class="btn btn--faded">Button</button>
+      <button class="btn btn--faded btn--dark">Button</button>
+      <button class="btn btn--faded btn--primary">Button</button>
+      <button class="btn btn--faded btn--secondary">Button</button>
+      <button class="btn btn--faded btn--neutral">Button</button>
+      <button class="btn btn--faded btn--info">Button</button>
+      <button class="btn btn--faded btn--success">Button</button>
+      <button class="btn btn--faded btn--warning">Button</button>
+      <button class="btn btn--faded btn--danger">Button</button>
+      <button class="btn btn--faded" disabled>Disabled</button>
     </div>
 
     <h3 class="mt-16">Ghost</h3>
     <div class="buttons">
       <button class="btn btn--ghost">Button</button>
-      <button class="btn btn--ghost accent-primary" disabled>Disabled</button>
-      <button class="btn btn--ghost accent-secondary">Button</button>
-      <button class="btn btn--ghost accent-neutral">Button</button>
-      <button class="btn btn--ghost accent-info">Button</button>
-      <button class="btn btn--ghost accent-success">Button</button>
-      <button class="btn btn--ghost accent-warning">Button</button>
-      <button class="btn btn--ghost accent-danger">Button</button>
+      <button class="btn btn--ghost btn--dark">Button</button>
+      <button class="btn btn--ghost btn--primary">Button</button>
+      <button class="btn btn--ghost btn--secondary">Button</button>
+      <button class="btn btn--ghost btn--neutral">Button</button>
+      <button class="btn btn--ghost btn--info">Button</button>
+      <button class="btn btn--ghost btn--success">Button</button>
+      <button class="btn btn--ghost btn--warning">Button</button>
+      <button class="btn btn--ghost btn--danger">Button</button>
+      <button class="btn btn--ghost" disabled>Disabled</button>
     </div>
-
 
     <div class="keys-1 my-16">
       <kbd>⌘</kbd> + <kbd>shift</kbd> + <kbd>M</kbd>
