--- a/dev/index.html
+++ b/dev/index.html
@@ -81,6 +81,20 @@
       <button class="btn btn--ghost" disabled>Disabled</button>
     </div>
 
+    <h3 class="mt-16">Link</h3>
+    <div class="buttons">
+      <button class="btn btn--link">Button</button>
+      <button class="btn btn--link btn--primary">Button</button>
+      <button class="btn btn--link btn--secondary">Button</button>
+      <button class="btn btn--link btn--neutral">Button</button>
+      <button class="btn btn--link btn--info">Button</button>
+      <button class="btn btn--link btn--success">Button</button>
+      <button class="btn btn--link btn--warning">Button</button>
+      <button class="btn btn--link btn--danger">Button</button>
+      <button class="btn btn--link btn--accent">Button</button>
+      <button class="btn btn--link" disabled>Disabled</button>
+    </div>
+
     <div class="keys-1 my-16">
       <kbd>⌘</kbd> + <kbd>shift</kbd> + <kbd>M</kbd>
     </div>
