--- a/dev/index.html
+++ b/dev/index.html
@@ -21,13 +21,30 @@
 
     <h3 class="mt-16">Default</h3>
     <div class="buttons">
-      <button autofocus>Button</button>
+      <button>Button</button>
+      <button class="btn">
+        <svg class="btn-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2"
+          fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path
+            d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+          </path>
+        </svg>
+        <span>Button</span>
+      </button>
       <button disabled>Disabled</button>
+      <button class="btn--compact">Button</button>
     </div>
 
     <h3 class="mt-16">Solid</h3>
     <div class="buttons">
-      <button class="btn btn--solid">Button</button>
+      <button class="btn btn--solid">
+        <svg class="btn-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2"
+          fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path
+            d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+          </path>
+        </svg>
+        <span>Button</span></button>
       <button class="btn btn--solid btn--primary">Button</button>
       <button class="btn btn--solid btn--secondary">Button</button>
       <button class="btn btn--solid btn--neutral">Button</button>
@@ -37,11 +54,21 @@
       <button class="btn btn--solid btn--danger">Button</button>
       <button class="btn btn--solid btn--accent">Button</button>
       <button class="btn btn--solid" disabled>Disabled</button>
+      <button class="btn btn--solid btn--compact">Compact</button>
+      <button class="btn btn--solid btn--danger btn--compact">Compact</button>
     </div>
 
     <h3 class="mt-16">Outline</h3>
     <div class="buttons">
-      <button class="btn btn--outline">Button</button>
+      <button class="btn btn--outline">
+        <svg class="btn-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2"
+          fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path
+            d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+          </path>
+        </svg>
+        <span>Button</span>
+      </button>
       <button class="btn btn--outline btn--primary">Button</button>
       <button class="btn btn--outline btn--secondary">Button</button>
       <button class="btn btn--outline btn--neutral">Button</button>
@@ -51,6 +78,8 @@
       <button class="btn btn--outline btn--danger">Button</button>
       <button class="btn btn--outline btn--accent">Button</button>
       <button class="btn btn--outline" disabled>Disabled</button>
+      <button class="btn btn--outline btn--compact">Compact</button>
+      <button class="btn btn--outline btn--danger btn--compact">Compact</button>
     </div>
 
     <h3 class="mt-16">Faded</h3>
@@ -65,6 +94,8 @@
       <button class="btn btn--faded btn--danger">Button</button>
       <button class="btn btn--faded btn--accent">Button</button>
       <button class="btn btn--faded" disabled>Disabled</button>
+      <button class="btn btn--faded btn--compact">Compact</button>
+      <button class="btn btn--faded btn--danger btn--compact">Compact</button>
     </div>
 
     <h3 class="mt-16">Ghost</h3>
@@ -79,6 +110,8 @@
       <button class="btn btn--ghost btn--danger">Button</button>
       <button class="btn btn--ghost btn--accent">Button</button>
       <button class="btn btn--ghost" disabled>Disabled</button>
+      <button class="btn btn--ghost btn--compact">Compact</button>
+      <button class="btn btn--ghost btn--danger btn--compact">Compact</button>
     </div>
 
     <h3 class="mt-16">Link</h3>
@@ -93,6 +126,95 @@
       <button class="btn btn--link btn--danger">Button</button>
       <button class="btn btn--link btn--accent">Button</button>
       <button class="btn btn--link" disabled>Disabled</button>
+      <button class="btn btn--link btn--compact">Compact</button>
+      <button class="btn btn--link btn--danger btn--compact">Compact</button>
+    </div>
+
+    <h3 class="mt-16">Variations</h3>
+    <div class="buttons">
+      <button class="btn btn--circle">
+        <svg class="h-20 w-20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+      <button class="btn btn--circle btn--solid">
+        <svg class="h-20 w-20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+
+      <button class="btn btn--circle btn--solid btn--accent"> <svg class="h-20 w-20" xmlns="http://www.w3.org/2000/svg"
+          fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+
+      <button class="btn btn--circle btn--ghost btn--danger">
+        <svg class="h-20 w-20" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2"
+          fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <polyline points="3 6 5 6 21 6"></polyline>
+          <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+        </svg>
+      </button>
+
+      <button class="btn btn--circle btn--solid btn--info"> <svg class="h-20 w-20" xmlns="http://www.w3.org/2000/svg"
+          fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+
+      <button class="btn btn--circle btn--outline btn--danger"> <svg xmlns="http://www.w3.org/2000/svg"
+          class="h-20 w-20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+
+      <button class="btn btn--circle btn--ghost"> <svg class="h-20 w-20" xmlns="http://www.w3.org/2000/svg" fill="none"
+          viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+
+      <button class="btn btn--circle btn--compact">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+
+      <button class="btn btn--circle btn--solid btn--compact">
+        <svg xmlns="http://www.w3.org/2000/svg" class="btn-icon btn-icon--compact" fill="none" viewBox="0 0 24 24"
+          stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+
+      <button class="btn btn--square">
+        <svg class="h-20 w-20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+
+      <button class="btn btn--square btn--compact">
+        <svg xmlns="http://www.w3.org/2000/svg" class="btn-icon btn-icon--compact" fill="none" viewBox="0 0 24 24"
+          stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+    </div>
+
+    <h3 class="mt-16">Button Groups</h3>
+    <div>
+      <div class="btn-group">
+        <button class="btn">One</button>
+        <button class="btn">Two</button>
+        <button class="btn">Three</button>
+      </div>
+
+      <div class="mt-8 btn-group btn-group--wide">
+        <button class="btn btn--solid">One</button>
+        <button class="btn btn--solid">Two</button>
+        <button class="btn btn--solid">Three</button>
+      </div>
     </div>
 
     <div class="keys-1 my-16">
